--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
   crossorigin="anonymous"
 />
+  <link rel='stylesheet' href='../src/App.css'/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -34,7 +35,16 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div className="mainpage-button-container">
+        <h1>Connexion Limitée</h1>
+        <h2>Veuillez selectionner votre langue // Please select your language</h2>
+        <span>
+          <Link className="mainpage-button" to="/fr">Français</Link>
+          <Link className="mainpage-button" to="/en">English</Link>
+        </span>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
